--- a/css/media_query.css
+++ b/css/media_query.css
@@ -115,6 +115,14 @@
   }
 
   .mainContent_img img {
-    max-height: 182px;
+    max-height: 382px;
+  }
+
+  .mainContent_img {
+    flex: 0 0 25%;
+  }
+
+  .mainContent_text {
+    flex-grow: 1;
   }
 }
